[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["kundziorro <example@dot.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"