[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["kundziorro <mateusz.baranczyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"